--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "1.16.1",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@types/apollo-upload-client": "^17.0.0",
@@ -19,21 +19,22 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-link-http": "^1.5.17",
     "apollo-upload-client": "^17.0.0",
-    "expo": "~42.0.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.2",
+    "expo": "^43.0.0",
+    "expo-image-picker": "~11.0.3",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
     "graphql": "^16.4.0",
     "install": "^0.13.0",
     "moment": "^2.29.1",
+    "react": "17.0.1",
     "react-content-loader": "^6.0.3",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.1",
     "react-hook-form": "^7.16.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-customized-image-picker": "^1.3.4",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-image-slider-box": "^1.1.8",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-mime-types": "^2.3.0",
@@ -42,21 +43,21 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-toast-message": "^1.6.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
